Remove legacy code from build.gradle

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -51,14 +51,7 @@ if(${REACT_NATIVE_MINOR_VERSION} GREATER_EQUAL 71)
 else()
     # Consume shared libraries from found .so files
     if(${IS_NEW_ARCHITECTURE_ENABLED})
-        if(${CLIENT_SIDE_BUILD})
-            set (RN_SO_DIR "${CMAKE_SOURCE_DIR}/../../../android/app/build/react-ndk/exported")
-            set (FBJNI_HEADERS_DIR "${REACT_NATIVE_DIR}/ReactAndroid/src/main/jni/first-party/fbjni/headers")
-        else()
-            # Reanimated Playground app
-            set (RN_SO_DIR "${CMAKE_SOURCE_DIR}/../${PLAYGROUND_APP_NAME}/android/app/build/react-ndk/exported")
-            set (FBJNI_HEADERS_DIR "${REACT_NATIVE_DIR}/ReactAndroid/src/main/jni/first-party/fbjni/headers")
-        endif()
+        message(FATAL_ERROR "not supported")
     else()
         set (RN_SO_DIR "${REACT_NATIVE_DIR}/ReactAndroid/src/main/jni/first-party/react/jni")
         set (FBJNI_HEADERS_DIR "${REACT_NATIVE_DIR}/ReactAndroid/src/main/jni/first-party/fbjni/headers")
@@ -339,8 +332,6 @@ endif()
 
 # Resolves "CMake Warning: Manually-specified variables were not used by the project"
 # when any of the following variables is not used in some build configuration.
-set (ignoreMe "${CLIENT_SIDE_BUILD}")
 set (ignoreMe "${JS_RUNTIME_DIR}")
 set (ignoreMe "${PLAYGROUND_APP_NAME}")
-set (ignoreMe "${REANIMATED_PACKAGE_BUILD}")
 set (ignoreMe "${BOOST_VERSION}")
