--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,33 +54,11 @@ def safeAppExtGet(prop, fallback) {
 def resolveBuildType() {
     Gradle gradle = getGradle()
     String tskReqStr = gradle.getStartParameter().getTaskRequests()['args'].toString()
-    
     return tskReqStr.contains('Release') ? 'release' : 'debug'
-}
-
-def resolveClientSideBuild() {
-    def clientSideBuild = System.getenv("CLIENT_SIDE_BUILD")
-    if (clientSideBuild != null) {
-        return clientSideBuild == "True"
-    }
-
-    if (hasProperty("clientSideBuild")) {
-        return property("clientSideBuild") == "true"
-    }
-
-    if (isDeveloperMode()) {
-        return false
-    }
-
-    return true
 }
 
 def isReanimatedExampleApp() {
     return safeAppExtGet("isReanimatedExampleApp", false)
-}
-
-def isDeveloperMode() {
-    return isReanimatedExampleApp() || System.getenv("REANIMATED_PACKAGE_BUILD") == "1"
 }
 
 def isNewArchitectureEnabled() {
@@ -97,7 +75,7 @@ def resolveReactNativeDirectory() {
         return file(reactNativeLocation)
     }
 
-    if (isDeveloperMode()) {
+    if (isReanimatedExampleApp()) {
         return file("$projectDir/../${getPlaygroundAppName()}/node_modules/react-native")
     }
 
@@ -130,8 +108,8 @@ def getPlaygroundAppName() { // only for the development
                 playgroundAppName = projectCatalogAbsolutePath.substring(slashPosition + 1)
             }
         })
-    } catch(_) {
-        return "NOT_FOUND"
+    } catch (_) {
+        throw GradleScriptException("Couldn't determine playground app name.")
     }
     return playgroundAppName
 }
@@ -155,17 +133,14 @@ def getReanimatedMajorVersion() {
     return major.toInteger()
 }
 
-def toPlatformFileString(String path) {
+static def toPlatformFileString(String path) {
   if (Os.isFamily(Os.FAMILY_WINDOWS)) {
       path = path.replace(File.separatorChar, '/' as char)
   }
   return path
 }
 
-boolean CLIENT_SIDE_BUILD = resolveClientSideBuild()
-if (CLIENT_SIDE_BUILD) {
-    configurations.maybeCreate("default")
-}
+configurations.maybeCreate("default")
 
 def reactNativeRootDir = resolveReactNativeDirectory()
 
@@ -174,7 +149,6 @@ file("$reactNativeRootDir/ReactAndroid/gradle.properties").withInputStream { rea
 
 def REACT_NATIVE_VERSION = reactProperties.getProperty("VERSION_NAME")
 def REACT_NATIVE_MINOR_VERSION = REACT_NATIVE_VERSION.startsWith("0.0.0-") ? 1000 : REACT_NATIVE_VERSION.split("\\.")[1].toInteger()
-def REANIMATED_PACKAGE_BUILD = System.getenv("REANIMATED_PACKAGE_BUILD")
 def REANIMATED_VERSION = getReanimatedVersion()
 def REANIMATED_MAJOR_VERSION = getReanimatedMajorVersion()
 
@@ -237,146 +211,6 @@ def reactNativeArchitectures() {
     return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
-def detectAAR(Integer rnMinorVersion, String engine) { // Reanimated2 only
-    def rnMinorVersionCopy = rnMinorVersion
-    def aar = file("react-native-reanimated-${rnMinorVersionCopy}-${engine}.aar")
-
-    if (aar.exists()) {
-        println "AAR for react-native-reanimated has been found\n$aar"
-        return aar
-    } else {
-        while (!aar.exists() && rnMinorVersionCopy >= 63) {
-            rnMinorVersionCopy -= 1
-            aar = file("react-native-reanimated-${rnMinorVersionCopy}-${engine}.aar")
-        }
-
-        if (rnMinorVersionCopy < 63) {
-            println "No AAR for react-native-reanimated found. Attempting to build from source."
-        } else { // aar exists, but was build for lower react-native version
-            println "\n\n\n"
-            println "****************************************************************************************"
-            println "\n\n\n"
-            println "WARNING reanimated - no version-specific reanimated AAR for react-native version $rnMinorVersion found."
-            println "Falling back to AAR for react-native version $rnMinorVersionCopy."
-            println "The react-native JSI interface is not ABI-safe yet, this may result in crashes."
-            println "Please post a pull request to implement support for react-native version $rnMinorVersion to the reanimated repo."
-            println "Thanks!"
-            println "\n\n\n"
-            println "****************************************************************************************"
-
-            return aar
-        }
-    }
-    return null
-}
-
-def isUserDemandToBuildFromSource() { // Reanimated2 only
-    def buildFromSourceConf = false
-    rootProject.getSubprojects().forEach({project ->
-        if (project.plugins.hasPlugin("com.android.application")) {
-            if (
-            project.ext.has("reanimated")
-                    && project.ext.reanimated.buildFromSource
-            ) {
-                buildFromSourceConf = true
-            }
-        }
-    })
-    return buildFromSourceConf
-}
-
-def shouldBuildFromSource(aar, jsRuntimeName) { // Reanimated2 only
-    if (jsRuntimeName == "v8") {
-        return true
-    }
-    else if (isDeveloperMode()) {
-        // Example app
-        return true
-    }
-    else if (isUserDemandToBuildFromSource()) {
-        // on user demand
-        return true
-    }
-    else if (aar != null) {
-        // when binary exist
-        return false
-    }
-    // when binary is not found
-    return true
-}
-
-def getTaskByPath(
-        project,
-        String appName,
-        String secondPart,
-        String flavorString,
-        String lastPart
-) {  // Reanimated2 only
-    String pathName = "${appName}:${secondPart}${flavorString}${lastPart}"
-    Task task = project.getTasks().findByPath(pathName)
-    if (task != null) {
-        return task
-    }
-    pathName = "${appName}:${secondPart}${flavorString.capitalize()}${lastPart}"
-    return project.getTasks().findByPath(pathName)
-}
-
-def aar = detectAAR(REACT_NATIVE_MINOR_VERSION, JS_RUNTIME)
-boolean BUILD_FROM_SOURCE = shouldBuildFromSource(aar, JS_RUNTIME)
-
-if (!BUILD_FROM_SOURCE && !isNewArchitectureEnabled()) { // Reanimated2 only
-    if (REACT_NATIVE_MINOR_VERSION < 65) {
-        tasks.register("replaceSoTaskDebug", replaceSoTask)
-        tasks.register("replaceSoTaskRelease", replaceSoTask)
-        Task replaceSoTaskDebug = project.getTasks().findByPath(":react-native-reanimated:replaceSoTaskDebug")
-        Task replaceSoTaskRelease = project.getTasks().findByPath(":react-native-reanimated:replaceSoTaskRelease")
-
-        if (replaceSoTaskDebug != null && replaceSoTaskRelease != null) {
-            rootProject.getSubprojects().forEach({project ->
-                if (project.plugins.hasPlugin("com.android.application") && project.getProperties().get("android")) {
-                    def projectProperties = project.getProperties()
-                    def flavorString = getCurrentFlavor()
-                    def reanimatedConf = projectProperties.get("reanimated")
-
-                    if (
-                    flavorString != "NOT-FOUND"
-                            && (!reanimatedConf || (reanimatedConf && !reanimatedConf.get("enablePackagingOptions")))
-                    ) {
-                        replaceSoTask.appName = projectProperties.path
-                        replaceSoTask.buildDir = projectProperties.buildDir
-                        def appName = projectProperties.path
-
-                        Task debugNativeLibsTask = getTaskByPath(project, appName, "merge", flavorString, "DebugNativeLibs")
-                        Task debugDebugSymbolsTask = getTaskByPath(project, appName, "strip", flavorString, "DebugDebugSymbols")
-                        Task releaseNativeLibsTask = getTaskByPath(project, appName, "merge", flavorString, "ReleaseNativeLibs")
-                        Task releaseDebugSymbolsTask = getTaskByPath(project, appName, "strip", flavorString, "ReleaseDebugSymbols")
-                        Task debugTask = getTaskByPath(project, appName, "package", flavorString, "Debug")
-                        Task releaseTask = getTaskByPath(project, appName, "package", flavorString, "Release")
-
-                        if (
-                        debugNativeLibsTask != null && debugDebugSymbolsTask != null
-                                && releaseNativeLibsTask != null && releaseDebugSymbolsTask != null
-                                && debugTask != null && releaseTask != null
-                        ) {
-                            replaceSoTaskDebug.dependsOn(debugNativeLibsTask, debugDebugSymbolsTask)
-                            debugTask.dependsOn(replaceSoTaskDebug)
-                            replaceSoTaskRelease.dependsOn(releaseNativeLibsTask, releaseDebugSymbolsTask)
-                            releaseTask.dependsOn(replaceSoTaskRelease)
-                        }
-                    }
-                }
-            })
-        }
-    }
-
-    artifacts.add("default", aar)
-}
-
-// end if already loaded aar
-if (!BUILD_FROM_SOURCE) {
-    return
-}
-
 buildscript {
     repositories {
         google()
@@ -402,6 +236,7 @@ apply plugin: "de.undercouch.download"
 
 android {
     compileSdkVersion safeExtGet("compileSdkVersion", 30)
+
     def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION
     if (agpVersion.tokenize('.')[0].toInteger() >= 7) {
         namespace "com.swmansion.reanimated"
@@ -434,11 +269,9 @@ android {
                         "-DREACT_NATIVE_DIR=${toPlatformFileString(reactNativeRootDir.path)}",
                         "-DJS_RUNTIME=${JS_RUNTIME}",
                         "-DJS_RUNTIME_DIR=${jsRuntimeDir}",
-                        "-DCLIENT_SIDE_BUILD=${CLIENT_SIDE_BUILD}",
                         "-DIS_NEW_ARCHITECTURE_ENABLED=${isNewArchitectureEnabled()}",
                         "-DIS_REANIMATED_EXAMPLE_APP=${isReanimatedExampleApp()}",
                         "-DPLAYGROUND_APP_NAME=${getPlaygroundAppName()}",
-                        "-DREANIMATED_PACKAGE_BUILD=${REANIMATED_PACKAGE_BUILD}",
                         "-DREANIMATED_VERSION=${REANIMATED_VERSION}"
                 abiFilters (*reactNativeArchitectures())
             }
@@ -459,7 +292,7 @@ android {
         debug {
             externalNativeBuild {
                 cmake {
-                    if (JS_RUNTIME == "hermes" && !REANIMATED_PACKAGE_BUILD) {
+                    if (JS_RUNTIME == "hermes") {
                         arguments "-DHERMES_ENABLE_DEBUGGER=1"
                     } else {
                         arguments "-DHERMES_ENABLE_DEBUGGER=0"
@@ -616,17 +449,6 @@ tasks.register('assertNoMultipleInstances', NoMultipleInstancesAssertionTask) {
 
 def NEW_ARCH_ENABLED = isNewArchitectureEnabled()
 
-def assertNoReanimated2WithNewArchitecture = task assertNoReanimated2WithNewArchitectureTask {
-    onlyIf { NEW_ARCH_ENABLED && REANIMATED_MAJOR_VERSION == 2 }
-    doFirst {
-        throw new GradleException(
-            "\n[react-native-reanimated] Reanimated 2.x does not support Fabric. " +
-            "Please upgrade to 3.x to use Reanimated with the New Architecture. " +
-            "For details, see https://blog.swmansion.com/announcing-reanimated-3-16167428c5f7"
-        )
-    }
-}
-
 def assertLatestReactNativeWithNewArchitecture = task assertLatestReactNativeWithNewArchitectureTask {
     onlyIf { NEW_ARCH_ENABLED && REANIMATED_MAJOR_VERSION == 3 && REACT_NATIVE_MINOR_VERSION < 72 }
     doFirst {
@@ -639,7 +461,7 @@ def assertLatestReactNativeWithNewArchitecture = task assertLatestReactNativeWit
 }
 
 tasks.preBuild {
-    dependsOn assertNoMultipleInstances, assertNoReanimated2WithNewArchitecture, assertLatestReactNativeWithNewArchitecture
+    dependsOn assertNoMultipleInstances, assertLatestReactNativeWithNewArchitecture
 }
 
 task cleanCmakeCache() {
@@ -1053,7 +875,6 @@ repositories {
 }
 
 dependencies {
-    // noinspection GradleDynamicVersion
     implementation "com.facebook.yoga:proguard-annotations:1.19.0"
     implementation "androidx.transition:transition:1.1.0"
     implementation "androidx.core:core:1.6.0"
@@ -1064,13 +885,9 @@ dependencies {
             implementation "com.facebook.react:hermes-android" // version substituted by RNGP
         }
     } else {
+        // noinspection GradleDynamicVersion
         implementation "com.facebook.react:react-native:+" // From node_modules
-        if (isDeveloperMode() && !isNewArchitectureEnabled()) {
-            implementation "com.facebook.fbjni:fbjni:" + FBJNI_VERSION
-        }
-        else {
-            implementation "com.facebook.fbjni:fbjni-java-only:" + FBJNI_VERSION
-        }
+        implementation "com.facebook.fbjni:fbjni-java-only:" + FBJNI_VERSION
 
         extractHeaders("com.facebook.fbjni:fbjni:" + FBJNI_VERSION + ":headers")
         extractSO("com.facebook.fbjni:fbjni:" + FBJNI_VERSION)
@@ -1129,11 +946,9 @@ afterEvaluate {
     }
 }
 
-if (CLIENT_SIDE_BUILD) {
-    def aarDir = "${buildDir}/outputs"
-    aar = file("${aarDir}/android-${resolveBuildType()}.aar") // e.g. android-debug.aar
-    if (aar == null) {
-        throw GradleScriptException("AAR build failed. No AAR found in ${aarDir}.")
-    }
-    artifacts.add("default", aar)
+def aarDir = "${buildDir}/outputs"
+def aar = file("${aarDir}/android-${resolveBuildType()}.aar") // e.g. android-debug.aar
+if (aar == null) {
+    throw GradleScriptException("AAR build failed. No AAR found in ${aarDir}.")
 }
+artifacts.add("default", aar)
