--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -19,23 +19,21 @@ jobs:
       cancel-in-progress: true
     steps:
       - name: Create app
-        run: npx react-native init app
-        # run: npx react-native init app --version nightly
-      # - name: Install Reanimated
-      #
-      #   working-directory: app
-      #   run: yarn add github:software-mansion/react-native-reanimated
-      # - name: Install Paper Pods
-      #   if: ${{ matrix.react-native-architecture == 'Paper' }}
-      #   working-directory: app/ios
-      #   run: pod install
-      # - name: Install Fabric Pods
-      #   if: ${{ matrix.react-native-architecture == 'Fabric' }}
-      #   working-directory: app/ios
-      #   run: export RCT_NEW_ARCH_ENABLED=1 && pod install
+        run: npx react-native init app --skip-install --version nightly
+      - name: Install Reanimated
+        working-directory: app
+        run: yarn add github:software-mansion/react-native-reanimated
+      - name: Install Paper Pods
+        if: ${{ matrix.react-native-architecture == 'Paper' }}
+        working-directory: app/ios
+        run: pod install
+      - name: Install Fabric Pods
+        if: ${{ matrix.react-native-architecture == 'Fabric' }}
+        working-directory: app/ios
+        run: export RCT_NEW_ARCH_ENABLED=1 && pod install
       - name: Build app
         working-directory: app
-        run: yarn react-native run-ios
+        run: yarn react-native run-ios --simulator='iPhone 14'
 
   # build_android:
   #   runs-on: ubuntu-latest
@@ -54,7 +52,7 @@ jobs:
   #         java-version: '18'
   #     - name: Create app
   #       run: npx react-native init app
-  #       # run: npx react-native init app --version nightly
+  #       # run: npx react-native init app --skip-install --version nightly
   #     - name: Install Reanimated
   #       working-directory: app
   #       run: yarn add github:software-mansion/react-native-reanimated
