--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build_ios:
-    runs-on: macos-12
+    runs-on: macos-13
     strategy:
       matrix:
         react-native-architecture: ['Paper', 'Fabric']
@@ -35,31 +35,31 @@ jobs:
         working-directory: app
         run: yarn react-native run-ios --simulator='iPhone 14'
 
-  # build_android:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       react-native-architecture: ['Paper', 'Fabric']
-  #     fail-fast: false
-  #   concurrency:
-  #     group: android-react-native-nightly-${{ matrix.react-native-architecture }}-${{ github.ref }}
-  #     cancel-in-progress: true
-  #   steps:
-  #     - name: Set up JDK 18
-  #       uses: actions/setup-java@v3
-  #       with:
-  #         distribution: 'zulu'
-  #         java-version: '18'
-  #     - name: Create app
-  #       run: npx react-native init app
-  #       # run: npx react-native init app --skip-install --version nightly
-  #     - name: Install Reanimated
-  #       working-directory: app
-  #       run: yarn add github:software-mansion/react-native-reanimated
-  #     - name: Setup Fabric
-  #       if: ${{ matrix.react-native-architecture == 'Fabric' }}
-  #       working-directory: app/android
-  #       run: sed -i 's/newArchEnabled=false/newArchEnabled=true/' gradle.properties
-  #     - name: Build app
-  #       working-directory: app/android
-  #       run: ./gradlew assembleDebug --console=plain
+  build_android:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        react-native-architecture: ['Paper', 'Fabric']
+      fail-fast: false
+    concurrency:
+      group: android-react-native-nightly-${{ matrix.react-native-architecture }}-${{ github.ref }}
+      cancel-in-progress: true
+    steps:
+      - name: Set up JDK 18
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '18'
+      - name: Create app
+        run: npx react-native init app
+        # run: npx react-native init app --skip-install --version nightly
+      - name: Install Reanimated
+        working-directory: app
+        run: yarn add github:software-mansion/react-native-reanimated
+      - name: Setup Fabric
+        if: ${{ matrix.react-native-architecture == 'Fabric' }}
+        working-directory: app/android
+        run: sed -i 's/newArchEnabled=false/newArchEnabled=true/' gradle.properties
+      - name: Build app
+        working-directory: app/android
+        run: ./gradlew assembleDebug --console=plain
