--- a/.github/workflows/check-expo-dev-client-nightly.yml
+++ b/.github/workflows/check-expo-dev-client-nightly.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build_ios:
-    runs-on: macos-13
+    runs-on: macos-12
     strategy:
       matrix:
         react-native-architecture: ['Paper', 'Fabric']
@@ -29,7 +29,7 @@ jobs:
         run: npx create-expo-app app
       - name: Install expo-dev-client
         working-directory: app
-        run: npx expo install expo-dev-client
+        run: npx expo install expo-dev-client@next
       - name: Setup configuration
         run: node ${{ env.SCRIPT_PATH }} setBundleIdentifier
       - name: Expo prebuild
