--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format:js": "prettier --write --list-different src __tests__ __typetests__",
     "format:plugin": "cd plugin && yarn format && cd ..",
     "format:java": "node ./scripts/format-java.js",
-    "format:ios": "find ios/ -iname *.h -o -iname *.m -o -iname *.mm -o -iname *.cpp | xargs clang-format -i --Werror",
+    "format:ios": "find apple/ -iname *.h -o -iname *.m -o -iname *.mm -o -iname *.cpp | xargs clang-format -i --Werror",
     "format:android": "find android/src/ -iname *.h -o -iname *.cpp | xargs clang-format -i",
     "format:common": "find Common/ -iname *.h -o -iname *.cpp | xargs clang-format -i",
     "find-unused-code:js": "yarn ts-prune --ignore \"index|.web.\" --error  ",
@@ -46,7 +46,7 @@
     "android/src/main/java/",
     "android/build.gradle",
     "android/",
-    "ios/",
+    "apple/",
     "RNReanimated.podspec",
     "scripts/reanimated_utils.rb",
     "mock.js",
@@ -55,7 +55,7 @@
     "!**/__tests__",
     "!**/__fixtures__",
     "!**/__mocks__",
-    "!ios/build/",
+    "!apple/build/",
     "!android/build/",
     "!android/.cxx/",
     "!android/.gradle/",
@@ -161,7 +161,7 @@
     "**/*.{h,cpp}": "yarn lint:cpp",
     "android/src/**/*.java": "yarn format:java",
     "android/src/**/*.{h,cpp}": "yarn format:android",
-    "ios/**/*.{h,m,mm,cpp}": "yarn format:ios",
+    "apple/**/*.{h,m,mm,cpp}": "yarn format:ios",
     "Common/**/*.{h,cpp}": "yarn format:common"
   },
   "react-native-builder-bob": {
