--- a/Example/android/gradle.properties
+++ b/Example/android/gradle.properties
@@ -41,6 +41,6 @@ newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-hermesEnabled=true
+hermesEnabled=false
 
 disableMultipleInstancesCheck=true
