--- a/TVOSExample/android/app/build.gradle
+++ b/TVOSExample/android/app/build.gradle
@@ -253,6 +253,11 @@ android {
 
         }
     }
+
+    packagingOptions {
+        // Make sure libjsc.so does not packed in APK
+        exclude "**/libjsc.so"
+    }
 }
 
 dependencies {
