Fix compatibility with rn@0.73 on Android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -249,6 +249,7 @@ android {
     if (REACT_NATIVE_MINOR_VERSION >= 71) {
         buildFeatures {
             prefab true
+            buildConfig true
         }
     }
     defaultConfig {
