--- a/.github/workflows/validate-cpp.yml
+++ b/.github/workflows/validate-cpp.yml
@@ -8,14 +8,14 @@ on:
       - '.github/workflows/validate-cpp.yml'
       - 'scripts/cpplint.sh'
       - 'Common/cpp/**'
-      - 'ios/native/**'
+      - 'apple/native/**'
       - 'android/src/main/cpp/**'
   pull_request:
     paths:
       - '.github/workflows/validate-cpp.yml'
       - 'scripts/cpplint.sh'
       - 'Common/cpp/**'
-      - 'ios/native/**'
+      - 'apple/native/**'
       - 'android/src/main/cpp/**'
   merge_group:
     branches:
