--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -5,7 +5,7 @@ on:
       - .github/workflows/ios-build.yml
       - RNReanimated.podspec
       - scripts/reanimated_utils.rb
-      - ios/**
+      - apple/**
       - Common/**
       - Example/package.json
       - Example/ios/**
