--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -8,32 +8,32 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_ios:
-    runs-on: macos-12
-    strategy:
-      matrix:
-        react-native-architecture: ['Paper', 'Fabric']
-      fail-fast: false
-    concurrency:
-      group: ios-react-native-nightly-${{ matrix.react-native-architecture }}-${{ github.ref }}
-      cancel-in-progress: true
-    steps:
-      - name: Create app
-        run: npx react-native init app --skip-install --version nightly
-      - name: Install Reanimated
-        working-directory: app
-        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
-      - name: Install Paper Pods
-        if: ${{ matrix.react-native-architecture == 'Paper' }}
-        working-directory: app/ios
-        run: pod install
-      - name: Install Fabric Pods
-        if: ${{ matrix.react-native-architecture == 'Fabric' }}
-        working-directory: app/ios
-        run: export RCT_NEW_ARCH_ENABLED=1 && pod install
-      - name: Build app
-        working-directory: app
-        run: yarn react-native run-ios --simulator='iPhone 14'
+  # build_ios:
+  #   runs-on: macos-12
+  #   strategy:
+  #     matrix:
+  #       react-native-architecture: ['Paper', 'Fabric']
+  #     fail-fast: false
+  #   concurrency:
+  #     group: ios-react-native-nightly-${{ matrix.react-native-architecture }}-${{ github.ref }}
+  #     cancel-in-progress: true
+  #   steps:
+  #     - name: Create app
+  #       run: npx react-native init app --skip-install --version nightly
+  #     - name: Install Reanimated
+  #       working-directory: app
+  #       run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
+  #     - name: Install Paper Pods
+  #       if: ${{ matrix.react-native-architecture == 'Paper' }}
+  #       working-directory: app/ios
+  #       run: pod install
+  #     - name: Install Fabric Pods
+  #       if: ${{ matrix.react-native-architecture == 'Fabric' }}
+  #       working-directory: app/ios
+  #       run: export RCT_NEW_ARCH_ENABLED=1 && pod install
+  #     - name: Build app
+  #       working-directory: app
+  #       run: yarn react-native run-ios --simulator='iPhone 14'
 
   build_android:
     runs-on: ubuntu-latest
@@ -50,15 +50,17 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '18'
-      - name: Create app
-        run: npx react-native init app --skip-install --version nightly
-      - name: Install Reanimated
-        working-directory: app
-        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
-      - name: Setup Fabric
-        if: ${{ matrix.react-native-architecture == 'Fabric' }}
-        working-directory: app/android
-        run: sed -i 's/newArchEnabled=false/newArchEnabled=true/' gradle.properties
-      - name: Build app
-        working-directory: app/android
-        run: ./gradlew assembleDebug --console=plain
+      - name: "test"
+        run: echo github:software-mansion/react-native-reanimated#${{ github.ref }}
+      # - name: Create app
+      #   run: npx react-native init app --skip-install --version nightly
+      # - name: Install Reanimated
+      #   working-directory: app
+      #   run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
+      # - name: Setup Fabric
+      #   if: ${{ matrix.react-native-architecture == 'Fabric' }}
+      #   working-directory: app/android
+      #   run: sed -i 's/newArchEnabled=false/newArchEnabled=true/' gradle.properties
+      # - name: Build app
+      #   working-directory: app/android
+      #   run: ./gradlew assembleDebug --console=plain
