Add macOS support  (#4912)
<!-- Thanks for submitting a pull request! We appreciate you spending
the time to work on these changes. Please follow the template so that
the reviewers can easily understand what the code changes affect. -->

## Summary

This PR adds support for macOS and CI tests for building.

In order to make Reanimated work on macOS, we needed to:

- rename `ios/` directory to `apple/` directory - this makes native
modules visible both on iOS and macOS
- add `react-native-macos` as a dependency
- use `RCTUIView` and `RCTPlatformDisplayLink` on macOS instead of
`UIView` and `CADisplayLink` (which are still in use on iOS).


**Note:** At the moment we don't support several features on macOS,
including:
- Layout Animations
- Shared Element Transitions
- Sensors
- examples using libraries without macOS support, e.g.
[react-native-screens](https://github.com/software-mansion/react-native-screens)
or
[react-native-gesture-handler](https://github.com/software-mansion/react-native-gesture-handler)

## Test plan

<!-- Provide a minimal but complete code snippet that can be used to
test out this change along with instructions how to run it and a
description of the expected behavior. -->

Tested using `MacOSExample`, as well as `Example/FabricExample` on
`iOS/Android`.


https://github.com/software-mansion/react-native-reanimated/assets/56112901/5f253794-82b4-4672-b7b3-eb352a9c8000

--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -1,34 +1,28 @@
-name: Test tvOS build
+name: Test macOS build
 on:
   pull_request:
     paths:
-      - '.github/workflows/tvos-build.yml'
+      - '.github/workflows/macos-build.yml'
       - 'RNReanimated.podspec'
       - 'apple/**'
       - 'Common/**'
-      - 'TVOSExample/package.json'
-      - 'TVOSExample/ios/**'
+      - 'MacOSExample/package.json'
+      - 'MacOSExample/ios/**'
+      - 'MacOSExample/macos/**'
   merge_group:
     branches:
       - main
   push:
     branches:
       - main
-    paths:
-      - '.github/workflows/tvos-build.yml'
-      - 'RNReanimated.podspec'
-      - 'ios/**'
-      - 'Common/**'
-      - 'TVOSExample/package.json'
-      - 'TVOSExample/ios/**'
 
 jobs:
   build:
     runs-on: macos-12
     env:
-      WORKING_DIRECTORY: TVOSExample
+      WORKING_DIRECTORY: MacOSExample
     concurrency:
-      group: tvos-${{ github.ref }}
+      group: macos-${{ github.ref }}
       cancel-in-progress: true
     steps:
       - name: Check out Git repository
@@ -38,8 +32,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-modules-reanimated-${{ hashFiles('yarn.lock') }}
-          restore-keys: ${{ runner.os }}-node-modules-reanimated-
+          key: ${{ runner.os }}-macos-node-modules-reanimated-${{ hashFiles('yarn.lock') }}
+          restore-keys: ${{ runner.os }}-macos-node-modules-reanimated-
 
       - name: Install Reanimated node_modules
         run: yarn install --frozen-lockfile
@@ -48,8 +42,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.WORKING_DIRECTORY }}/node_modules
-          key: ${{ runner.os }}-node-modules-${{ env.WORKING_DIRECTORY }}-${{ hashFiles(format('{0}/yarn.lock', env.WORKING_DIRECTORY)) }}
-          restore-keys: ${{ runner.os }}-node-modules-${{ env.WORKING_DIRECTORY }}-
+          key: ${{ runner.os }}-macos-node-modules-${{ env.WORKING_DIRECTORY }}-${{ hashFiles(format('{0}/yarn.lock', env.WORKING_DIRECTORY)) }}
+          restore-keys: ${{ runner.os }}-macos-node-modules-${{ env.WORKING_DIRECTORY }}-
 
       - name: Install app node_modules
         working-directory: ${{ env.WORKING_DIRECTORY }}
@@ -59,23 +53,23 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ${{ env.WORKING_DIRECTORY }}/ios/Pods
+            ${{ env.WORKING_DIRECTORY }}/macos/Pods
             ~/Library/Caches/CocoaPods
             ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ env.WORKING_DIRECTORY }}-${{ hashFiles(format('{0}/ios/Podfile.lock', env.WORKING_DIRECTORY)) }}
+          key: ${{ runner.os }}-macos-pods-${{ env.WORKING_DIRECTORY }}-${{ hashFiles(format('{0}/macos/Podfile.lock', env.WORKING_DIRECTORY)) }}
 
       - name: Install Pods
-        working-directory: ${{ env.WORKING_DIRECTORY }}/ios
+        working-directory: ${{ env.WORKING_DIRECTORY }}/macos
         run: pod install
 
       - name: Restore build artifacts from cache
         uses: actions/cache@v3
         with:
           path: |
-            ${{ env.WORKING_DIRECTORY }}/ios/build
+            ${{ env.WORKING_DIRECTORY }}/macos/build
             ~/Library/Developer/Xcode/DerivedData
-          key: ${{ runner.os }}-tvos-build-${{ env.WORKING_DIRECTORY }}-${{ hashFiles(format('{0}/ios/Podfile.lock', env.WORKING_DIRECTORY)) }}
+          key: ${{ runner.os }}-macos-build-${{ env.WORKING_DIRECTORY }}-${{ hashFiles(format('{0}/macos/Podfile.lock', env.WORKING_DIRECTORY)) }}
 
       - name: Build app
         working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: yarn tvos
+        run: yarn macos
